<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="contador.piedras.jugger" >

    <TextView
        android:id="@+id/TV_nameT1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:layout_alignParentTop="true"
        android:text="@string/team1"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/red"
        android:textSize="35sp" />
    
    <TextView
        android:id="@+id/TV_nameT2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TV_pointT1"
        android:layout_alignParentRight="true"
        android:text="@string/team2"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/green"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/TV_pointT1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TV_nameT1"
        android:layout_toRightOf="@+id/b_mast1"
        android:text="@string/cero"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/red"
        android:textSize="35sp" />

    <Button
        android:id="@+id/b_mast1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/TV_pointT1"
        android:background="@drawable/max" />

    <Button
        android:id="@+id/b_mint1"
        android:layout_width="50dp"
        android:layout_height="10dp"
        android:background="@drawable/min"
        android:layout_alignTop="@+id/b_mast1"
        android:layout_toRightOf="@+id/TV_pointT1"
        android:layout_toEndOf="@+id/TV_pointT1" />

    <Button
        android:id="@+id/b_stop"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/stop" />

    <Button
        android:id="@+id/b_start"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/play" />

    <TextView
        android:id="@+id/TV_cero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/cero"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white"
        android:textSize="100sp" />

    <Button
        android:id="@+id/inc_stones"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/max" />

    <Button
        android:id="@+id/dec_stones"
        android:layout_width="50dp"
        android:layout_height="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/min" />

    <Button
        android:id="@+id/b_mint2"
        android:layout_width="50dp"
        android:layout_height="10dp"
        android:background="@drawable/min"
        android:layout_below="@+id/b_mint1"
        android:layout_toRightOf="@+id/TV_pointT2"
        android:layout_toEndOf="@+id/TV_pointT2" />

    <TextView
        android:id="@+id/TV_pointT2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/b_mast1"
        android:layout_alignLeft="@+id/b_stop"
        android:layout_marginLeft="26dp"
        android:text="@string/cero"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/green"
        android:textSize="35sp" />

    <Button
        android:id="@+id/b_mast2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/max"
        android:layout_below="@+id/TV_pointT2"
        android:layout_alignLeft="@+id/TV_nameT2"
        android:layout_alignStart="@+id/TV_nameT2" />

</RelativeLayout>
